removes width from div.challenge in ChallengeGraph to fix overflow problem with long timing descriptions/usernames

--- a/js/widgets/site/Lightsquare/_HomePage/_ChallengeGraph/challenge_graph.css
+++ b/js/widgets/site/Lightsquare/_HomePage/_ChallengeGraph/challenge_graph.css
@@ -66,7 +66,6 @@ div.challenge {
 	position: relative;
 	z-index: 1;
 	box-sizing: border-box;
-	width: 10%;
 	min-width: 5em;
 	border: 1px solid #cfcfcf;
 	padding: .3em .5em;
